--- a/app/templates/macros.html
+++ b/app/templates/macros.html
@@ -1,4 +1,7 @@
 
+
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" crossorigin="anonymous" referrerpolicy="no-referrer">
+<link rel="stylesheet" href="{{url_for('static',filename='CSS/index.css')}}">
 {% macro display(piches) %}
 <div class="container-fluid">
 		<div class="row">
