--- a/app/templates/comment.html
+++ b/app/templates/comment.html
@@ -3,6 +3,10 @@
 {% extends 'base.html'%}
 {% import 'bootstrap/wtf.html' as wtf %}
 
+{{ super() }}
+<link rel="stylesheet" href="{{url_for('static',filename='CSS/index.css')}}">
+{% endblock %}
+
 {% block content %}
     <div class="container" id="allcomments" >
         <div class="row">
