--- a/app/templates/create_pitch.html
+++ b/app/templates/create_pitch.html
@@ -1,6 +1,12 @@
 {% extends 'base.html'%}
 {% import 'bootstrap/wtf.html' as wtf %}
 
+
+{% block styles%}
+    {{ super() }}
+    <link rel="stylesheet" href="{{url_for('static',filename='CSS/index.css')}}">
+{% endblock %}
+
 {% block content %}
 
     <div  id="particles-js"  >  
