--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,6 +2,10 @@
 
 {% import 'macros.html' as macro %}
 
+{% block styles%}
+    {{ super() }}
+    <link rel="stylesheet" href="{{url_for('static',filename='CSS/index.css')}}">
+{% endblock %}
 {% block content %}
 <div class="contsiner">
     <h2 class="text-center" id="posts">All Pitches</h2>
