--- a/app/templates/macros.html
+++ b/app/templates/macros.html
@@ -1,38 +1,34 @@
 
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" crossorigin="anonymous" referrerpolicy="no-referrer">
-<link rel="stylesheet" href="{{url_for('static',filename='CSS/index.css')}}">
-{% macro display(piches) %}
+<link rel="stylesheet" href="{{url_for('static',filename='css/index.css')}}">
+{% macro display(pitches) %}
 <div class="container-fluid">
-		<div class="row">
-				{% if piches %}
-					{% for category in piches %}
-					<div class="col-md-4" >
-						<div class="thumbnail" id="carded">
-							<h5 class="card-header">{{category.title}}</h5>
-							<div class="card-body">
-									<p>{{category.post}}</p>
-									<p class="text-center"> Category: {{category.category}}</p>
-									<footer class="blockquote-footer text-center" > Posted by: {{category.user.username}}</footer>
-								<div><span class="foot" >{{category.comment.count()}} Comments</span> 
-									<span class="foot" > <a href="{{url_for('main.like',id = category.id)}}"><i class="fa fa-thumbs-up" style="font-size:18px;color: green"></i></a> {{category.upvote.count()}}</span>
-									
-									<span class="foot"> <a href="{{url_for('main.dislike',id = category.id)}}"> <i class="fa fa-thumbs-down" style="color:red;"></i> {{category.downvote.count()}}</a></span></div>
-			
-								<a href="{{url_for('main.comment',pitch_id = category.id)}}" class="btn btn-info btn-sm"> Comment</a>
-							</div>
-						</div>
-					</div>
-					
-					{% endfor %}
-				{% else %}
-				<div class="card w-90 mb-3">
-					<div class="card-body">
-				
-						<p class="card-title">Category Has 0 posts</p>
-					</div>
-				</div>
-				{% endif %}
-			</div>
+<div class="row">
+    {% if pitches %}
+    {% for pitch in pitches %}
+    <div class="col-md-6">
+        <div class="card">
+        <div class="card-heading">
+        <p>Category: {{pitch.category}}</p>
+        </div>
+        <div class="card-body">
+            <p><strong>{{ pitch.title}}</strong></p>
+            <p>{{ pitch.post}}</p>
+        </div>
+        <br>
+        <div class = vote>
+        <span class="pl-3"><a href="{{url_for('main.upvote',id = pitch.id)}}"> <i class="fa fa-thumbs-up" id="like"></i></a> {{pitch.upvote.count()}}</span>
+        <span class="pl-3"><a class="text-dark" href="{{url_for('main.downvote',id = pitch.id)}}"><i class="fa fa-thumbs-down" id="dislike"></i>{{pitch.downvote.count()}}</a></span>
+        <span class="pl-4"><a href="{{url_for('main.comment',pitch_id = pitch.id)}}" class="btn btn-outline-primary btn-sm"> Comment</a></span>
+    </div>
+    <div class="card-footer">
+        <p>Posted By: {{ pitch.user_id.username }}</p>
+    </div>
+        </div>
+    </div>
+    {% endfor %}
+    {% endif %}
+</div>
 </div>
 {% endmacro %}
