--- a/app/templates/comment.html
+++ b/app/templates/comment.html
@@ -2,43 +2,41 @@
 
 {% extends 'base.html'%}
 {% import 'bootstrap/wtf.html' as wtf %}
-
+{% block styles%}
 {{ super() }}
-<link rel="stylesheet" href="{{url_for('static',filename='CSS/index.css')}}">
+<link rel="stylesheet" href="{{url_for('static',filename='css/index.css')}}">
 {% endblock %}
-
 {% block content %}
-    <div class="container" id="allcomments" >
-        <div class="row">
-
-            {% if all_comments %}
-                <div class="col-md-7" >
-                    <h3 class="text-center" id="coms">All comments for the post</h3>
-                    {% for comment in all_comments %}
-                       <div class="card w-90 mb-3" >
-                           <div class="card-body">
-                            <h5>{{comment.pitch.title}}</h5>
-                             <p class="card-title">{{ comment.comment }}</p>
-                             <p class="card-text">--- {{comment.user.username}}</p>
-                           </div>
-                       </div>
-                    {% endfor %}
-                   </div>
-                   <div class="col-md-5  commentform" >
-
-                        {{wtf.quick_form(form)}}
-                   </div>
-               </div>
-            {%else%}
-            <div class="card w-90 mb-3">
-                <div class="card-body">
-                  <p class="card-title">No Comments for this yet for this post. Be the first to comment</p>
-                </div>
-            </div> 
-            <div class="col-md-5">
-                    {{wtf.quick_form(form)}}
-                </div>
-            {%endif%}
+<div class="container">
+    <div class="row">
+        {% if comments %}
+        <div class="col-md-4">
+            <h4>Post Comments</h4>
+            {% for comment in comments %}
+            <div class="card">
+                <h5>{{comment.pitch.title}}</h5>
+                <p>{{comment.comment}}</p>
+                <p>{{comment.user.username}}</p>
+            </div>
+            {% endfor %}
+        </div>
+        <div class="col-md-2">
+            {{wtf.quick_form(form ,button_map={'submit':'outline-primary'})}}
+        </div>
+        {% else %}
+        <div class="col-md-4">
+            <h4>Post comments</h4>
+            <div class="card">
+                <p>This post has no comments</p>
+            </div>
+        </div>
+        <div class="col-md-2">
+            {{wtf.quick_form(form ,button_map={'submit':'outline-primary'})}}
+        </div>
+        {%endif%}
     </div>
-   
-{% endblock%}
+</div>
+<div class="fixed-bottom">
+    <p>@Copyright (c) All Rights Reserved</p>
+</div>
+{% endblock %}
