--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,42 +1,53 @@
-{% extends 'base.html' %}
 
+
+{% extends 'base.html'%}
 {% import 'macros.html' as macro %}
 
 {% block styles%}
     {{ super() }}
-    <link rel="stylesheet" href="{{url_for('static',filename='CSS/index.css')}}">
+    <link rel="stylesheet" href="{{url_for('static',filename='css/index.css')}}">
 {% endblock %}
-{% block content %}
-<div class="contsiner">
-    <h2 class="text-center" id="posts">All Pitches</h2>
 
-    <ul class="nav nav-pills nav-justified nav-fill" role="tablist">
-          <li class="nav-item">
-              <a data-toggle="tab" href="#all" id="cats" class="nav-link"><strong>All Pitches</strong></a>
-          </li>
-          <li class="nav-item">
-              <a data-toggle="tab" href="#jobs" class="nav-link" id="cats">Job Pitches</a>
-          </li>
-          <li class="nav-item">
-            <a data-toggle="tab" href="#events" class="nav-link" id="cats">Events Pitches</a>
-          </li>
-          <li class="nav-item">
-            <a data-toggle="tab" href="#ads" class="nav-link" id="cats">Adverts Pitches</a>
+{% block content %}
+
+<div class="container-fluid">
+    <!-- <div class="nav">
+        <ul class="cat">
+        <li class="nav-item" >
+            <a class="nav-link title active" data-toggle="tab" href="#pitches"><strong>Pitches</strong> </a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link title"  data-toggle="tab" href="#advertisement">Advertisement</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link title"  data-toggle="tab" href="#interview">Interview</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link title" data-toggle="tab" href="#product">Product</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link title" data-toggle="tab" href="#technology">Technology</a>
         </li>
     </ul>
-    <div class="tab-content">
-        <div class="container tab-pane active" id="all">
-           {{ macro.display(pitches) }}
+    </div> -->
+    <div class="container content">
+        <div  class="container active" id="pitches"><br>
+            {{ macro.display(pitches) }}
         </div>
-        <div class="container tab-pane active" id="event">
-            {{ macro.display(event) }}
-         </div>
-         <div class="container tab-pane active" id="jobs">
-            {{ macro.display(job) }}
-         </div>
-         <div class="container tab-pane active" id="ads">
-            {{ macro.display(advertisement) }}
-         </div>
+        <div  class="container" id="advertisement"><br>
+            {{ macro.display(advertisement)}}
+        </div>
+        <div  class="container" id="interview"><br>
+            {{ macro.display(interview) }}
+        </div>
+        <div  class="container" id="product"><br>
+            {{ macro.display(product) }}
+            
+        </div>
+        <div  class="container" id="technology"><br>
+            {{ macro.display(technology) }}
+            
+        </div>
     </div>
 </div>
 {% endblock%}
