--- a/app/templates/new_pitch.html
+++ b/app/templates/new_pitch.html
@@ -1,6 +1,6 @@
 
 
-{% extends 'base.html' %}
+{% extends 'base.html'%}
 {% import 'bootstrap/wtf.html' as wtf %}
 {% block styles%}
     {{ super() }}
@@ -9,6 +9,12 @@
 
 {% block content %}
 <div class="container">
-    {{wtf.quick_form(form,button_map={'submit':'outline-primary'})}}
+    <div class="row">
+        <div class="col-md-5">
+            <h3>Create a Pitch</h3>
+            <hr>
+            {{wtf.quick_form(form, button_map={'submit':'outline-primary'})}}
+        </div>
+    </div>
 </div>
 {% endblock %}
