--- a/app/templates/profile/profile.html
+++ b/app/templates/profile/profile.html
@@ -1,54 +1,49 @@
+
+
 {% extends 'base.html'%}
+{% block styles%}
+{{ super() }}
+<link rel="stylesheet" href="{{url_for('static',filename='css/index.css')}}">
+{% endblock %}
+
 {% block content %}
-<div class="container" style="margin-top: 1%;">
-  <div class="row">
-      <div class="col-md-4 pict">
-          <div class="card testimonial-card">
-             {% if user.profile_pic_path %}
-               <img src="" alt="avatar">
-             {%else%}
-             <p>No profile</p>
-             {% endif %}
-          </div>
-          <div class="card-body">
-              <h5 class="text-center">{{ user.username | capitalize }}</h5>
-              <hr>
-              {% if user.bio %} 
-              <p><i class="fas fa-quote-left">{{user.bio}}</i></p>
-              {% else %}
-              <p>{{user.username | capitalize}} has no bio </p>
-              {% endif %}
-              {% if user == current_user %}
-              <div class="profpic">
-                  <div id="update">
-                      <a href="{{url_for('main.updateprofile', name=user.username)}}">Edit Bio</a>
-                      <button class="btn btn-sm btn-info" id="profbutton">update pic</button>
-                  </div>
-                  <div id="imgform">
-                     <form action="{{url_form('main.update_pic',name=user.username)}}" method="post" enctype="multipart/form-data">
-                         <input type="file" name="photo" class="form-control" required>
-                         <input type="submit" class="btn btn-sm btn-info" id="submit">
-                     </form>
-                  </div>
-              </div>
-              {% endif %} 
-          </div>
-      </div>
-  </div>
-  <div class="col-sm-1"></div>
-  <div class="col-sm-5" id="user">
-      {% if current_user %} 
-      <h3 class="text-center">You have{{user.pitches.count()}} Pitches</h3>
-      {% for iin posts% }
-      <div class="pitches">
-          <h5>Titie: {{i.title}}</h5>
-          <h6>{{i.post}}</h6>
-          <p>{{i.comment.count()}} Comments</p>
-      </div>
-      {%endfor% }
-      {%else%}
-      <h3>You have) posts</h3>
-      {%endif%}
-  </div>
+<div class="container">
+    <div>
+    <h4>Profile</h4>
+    {% if user.profile_pic_path %}
+    <img class="img-thumbnail rounded-circle account-img" src="{{url_for('static',filename=user.profile_pic_path)}}" alt="">
+    {% else %}
+    <p>Add profile picture</p>
 </div>
-{% endblock}
+    <div class="body">
+        <p>{{ current_user.username }}</p>
+        <p>{{ current_user.email }}</p>
+    </div>
+    {% if user bio %}
+    <p>{{User.bio}}</p>
+    {% else %}
+    <p>{{User.username| capitalize}} Kindly create your bio</p>
+    {% endif %}
+    % if user == current_user %}
+    <a href="{{url_for('main.update_profile',uname=user.username)}}">Update Bio Here</a>
+    <form action="{{url_for('main.update_pic',uname=user.username)}}">
+        <textarea name="" id="" cols="30" rows="10"></textarea>
+        <button>Submit</button>
+    </form>
+    {% endif %}
+    <div>
+        <h4>Posts</h4>
+        {% if user == current_user %}
+        {% for post in posts%}
+        <div>
+            <h5>{{ post.title }}</h5>
+            <p>{{ post.post }}</p>
+            <p>Comments:
+                {{post.comment.count()}}
+            </p>
+        </div>
+        {% endfor %}
+        {% endif %}
+    </div>
+</div>
+{ % endblock %}
