--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -4,7 +4,7 @@
 {% import 'bootstrap/wtf.html' as wtf%}
 {% block styles%}
     {{ super() }}
-    <link rel="stylesheet" href="{{url_for('static',filename='css/index.css')}}">
+    <link rel="stylesheet" href="{{url_for('static',filename='CSS/index.css')}}">
 {% endblock %}
 
 {% block content %}
