--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -5,31 +5,13 @@
 
 {% block styles%}
     {{ super() }}
-    <link rel="stylesheet" href="{{url_for('static',filename='css/index.css')}}">
+    <link rel="stylesheet" href="{{url_for('static',filename='CSS/index.css')}}">
 {% endblock %}
 
 {% block content %}
 
 <div class="container-fluid">
-    <!-- <div class="nav">
-        <ul class="cat">
-        <li class="nav-item" >
-            <a class="nav-link title active" data-toggle="tab" href="#pitches"><strong>Pitches</strong> </a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link title"  data-toggle="tab" href="#advertisement">Advertisement</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link title"  data-toggle="tab" href="#interview">Interview</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link title" data-toggle="tab" href="#product">Product</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link title" data-toggle="tab" href="#technology">Technology</a>
-        </li>
-    </ul>
-    </div> -->
+    
     <div class="container content">
         <div  class="container active" id="pitches"><br>
             {{ macro.display(pitches) }}
